--- a/platform/stack/packages/core/adhar-console/manifests/argocd-secrets.yaml
+++ b/platform/stack/packages/core/adhar-console/manifests/argocd-secrets.yaml
@@ -39,7 +39,7 @@ roleRef:
   name: eso-store
   apiGroup: rbac.authorization.k8s.io
 ---
-apiVersion: external-secrets.io/v1beta1
+apiVersion: external-secrets.io/v1
 kind: ClusterSecretStore
 metadata:
   name: argocd
@@ -58,7 +58,7 @@ spec:
           name: eso-store
           namespace: argocd
 ---
-apiVersion: external-secrets.io/v1beta1
+apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
   name: argocd-credentials
