--- a/platform/stack/packages/security/keycloak/manifests/secret-gen.yaml
+++ b/platform/stack/packages/security/keycloak/manifests/secret-gen.yaml
@@ -2,7 +2,7 @@ apiVersion: generators.external-secrets.io/v1alpha1
 kind: Password
 metadata:
   name: keycloak
-  namespace: keycloak
+  namespace: adhar-system
 spec:
   length: 36
   digits: 5
@@ -11,11 +11,11 @@ spec:
   noUpper: false
   allowRepeat: true
 ---
-apiVersion: external-secrets.io/v1beta1
+apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
   name: keycloak-config
-  namespace: keycloak
+  namespace: adhar-system
 spec:
   refreshInterval: "0"
   target:
@@ -25,15 +25,14 @@ spec:
         labels:
           adhar.io/cli-secret: "true"
           adhar.io/package-name: keycloak
-      engineVersion: v2
       data:
-        KEYCLOAK_ADMIN_PASSWORD: "{{.KEYCLOAK_ADMIN_PASSWORD}}"
+        KEYCLOAK_ADMIN_PASSWORD: "{{ .KEYCLOAK_ADMIN_PASSWORD }}"
         KC_DB_USERNAME: keycloak
-        KC_DB_PASSWORD: "{{.KC_DB_PASSWORD}}"
+        KC_DB_PASSWORD: "{{ .KC_DB_PASSWORD }}"
         POSTGRES_DB: keycloak
         POSTGRES_USER: keycloak
-        POSTGRES_PASSWORD: "{{.KC_DB_PASSWORD}}"
-        USER_PASSWORD: "{{.USER_PASSWORD}}"
+        POSTGRES_PASSWORD: "{{ .KC_DB_PASSWORD }}"
+        USER_PASSWORD: "{{ .USER_PASSWORD }}"
   dataFrom:
     - sourceRef:
         generatorRef:
@@ -64,12 +63,12 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: eso-store
-  namespace: keycloak
+  namespace: adhar-system
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
-  namespace: keycloak
+  namespace: adhar-system
   name: eso-store
 rules:
   - apiGroups: [""]
@@ -90,90 +89,50 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: eso-store
-  namespace: keycloak
+  namespace: adhar-system
 subjects:
   - kind: ServiceAccount
     name: eso-store
-    namespace: keycloak
+    namespace: adhar-system
 roleRef:
   kind: Role
   name: eso-store
   apiGroup: rbac.authorization.k8s.io
 ---
-apiVersion: external-secrets.io/v1beta1
+apiVersion: external-secrets.io/v1
 kind: ClusterSecretStore
 metadata:
   name: keycloak
 spec:
   provider:
     kubernetes:
-      remoteNamespace: keycloak
+      remoteNamespace: adhar-system
       server:
         caProvider:
           type: ConfigMap
           name: kube-root-ca.crt
-          namespace: keycloak
+          namespace: kube-public
           key: ca.crt
       auth:
         serviceAccount:
           name: eso-store
-          namespace: keycloak
+          namespace: adhar-system
 ---
-apiVersion: v1
-kind: ServiceAccount
-metadata:
-  name: eso-store
-  namespace: gitea
----
-apiVersion: rbac.authorization.k8s.io/v1
-kind: Role
-metadata:
-  name: eso-store
-  namespace: gitea
-rules:
-  - apiGroups: [""]
-    resources:
-      - secrets
-    verbs:
-      - get
-      - list
-      - watch
-  - apiGroups:
-      - authorization.k8s.io
-    resources:
-      - selfsubjectrulesreviews
-    verbs:
-      - create
----
-apiVersion: rbac.authorization.k8s.io/v1
-kind: RoleBinding
-metadata:
-  name: eso-store
-  namespace: gitea
-subjects:
-  - kind: ServiceAccount
-    name: eso-store
-    namespace: gitea
-roleRef:
-  kind: Role
-  name: eso-store
-  apiGroup: rbac.authorization.k8s.io
----
-apiVersion: external-secrets.io/v1beta1
+apiVersion: external-secrets.io/v1
 kind: ClusterSecretStore
 metadata:
   name: gitea
 spec:
   provider:
     kubernetes:
-      remoteNamespace: gitea
+      remoteNamespace: adhar-system
       server:
         caProvider:
           type: ConfigMap
           name: kube-root-ca.crt
-          namespace: gitea
+          namespace: kube-public
           key: ca.crt
       auth:
         serviceAccount:
           name: eso-store
-          namespace: gitea
+          namespace: adhar-system
