--- a/platform/stack/adhar-appset-local.yaml
+++ b/platform/stack/adhar-appset-local.yaml
@@ -9,7 +9,7 @@ spec:
         elements:
           - name: "external-secrets"
             enabled: "true"
-            namespace: "external-secrets"
+            namespace: "adhar-system"
             category: "security"
             manifestPath: "security/external-secrets/manifests"
           - name: "cert-manager"
@@ -44,7 +44,7 @@ spec:
             manifestPath: "observability/headlamp/manifests"
           - name: "keycloak"
             enabled: "true"
-            namespace: "keycloak"
+            namespace: "adhar-system"
             category: "security"
             manifestPath: "security/keycloak/manifests"
           - name: "argo-workflows"
@@ -188,3 +188,16 @@ spec:
           - Replace=true
           - CreateNamespace=true
           - ServerSideApply=true
+      ignoreDifferences:
+        - group: admissionregistration.k8s.io
+          kind: MutatingWebhookConfiguration
+          jqPathExpressions:
+            - .webhooks[].clientConfig.caBundle
+        - group: admissionregistration.k8s.io
+          kind: ValidatingWebhookConfiguration
+          jqPathExpressions:
+            - .webhooks[].clientConfig.caBundle
+        - group: apiextensions.k8s.io
+          kind: CustomResourceDefinition
+          jqPathExpressions:
+            - .spec.conversion.webhook.clientConfig.caBundle
