--- a/platform/stack/packages/observability/headlamp/manifests/secret.yaml
+++ b/platform/stack/packages/observability/headlamp/manifests/secret.yaml
@@ -1,4 +1,4 @@
-apiVersion: external-secrets.io/v1beta1
+apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
   name: headlamp-oidc
@@ -11,9 +11,8 @@ spec:
   target:
     name: headlamp-oidc
     template:
-      engineVersion: v2
       data:
-        HEADLAMP_CLIENT_SECRET: "{{.HEADLAMP_CLIENT_SECRET}}"
+        HEADLAMP_CLIENT_SECRET: "{{ .HEADLAMP_CLIENT_SECRET }}"
   data:
     - secretKey: HEADLAMP_CLIENT_SECRET
       remoteRef:
